[workspace]
resolver = "2"

members = [
    "bin/pbft",
    "crates/config",
    "crates/consensus",
]

default-members = ["bin/pbft"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["zzzzzzzzzzb"]

[workspace.dependencies]
pbft = {path = "bin/pbft"}
consensus = {path = "crates/consensus"}
config = {path = "crates/config"}


bytes = "1.6.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
anyhow = "1.0.82"
sha2 = "0.10.8"
once_cell = "1.19.0"
tokio = { version = "1.37.0", features = ["full"] }
tonic-build = "0.11.0"
thiserror = "1.0.59"
tonic = "0.11.0"
prost = "0.12.4"
tracing = "0.1"
tracing-subscriber = "0.3"
